[project]
name = "comfyui-zeug"
description = "Collection of custom nodes designed to provide missing features and improve usability"
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/adrianschubek/comfyui-zeug"

[tool.comfy]
PublisherId = "adrianschubek"
DisplayName = "ComfyUI-Zeug"
Icon = "https://avatars.githubusercontent.com/u/19362349"